contrast-issue-color-resolved

--- a/styles/Alert/alert.css
+++ b/styles/Alert/alert.css
@@ -10,26 +10,26 @@
 
 .alert-primary{
     background-color: var(--light-purple);
-    color: var(--purple)
+    color: var(--primary)
 }
 .alert-secondary{
     border: 1px solid rgba(0,0,0,0.1);
-    color: var(--gray)
+    color: var(--primary)
 }
 .alert-info{
     background-color: var(--light-blue);
-    color: var(--info);
+    color: var(--primary)
 }
 .alert-warning{
     background-color: var(--light-yellow);
-    color: var(--yellow);
+    color: var(--primary)
 }
 .alert-success{
     background-color: var(--light-green);
-    color: var(--green);
+    color: var(--primary)
 }
 
 .alert-danger{
     background-color: var(--light-red);
-    color: var(--danger);
+    color: var(--primary)
 }
